# registry-manager.csra-db

./: .gitignore  .gitmodules  .workspace.conf  CMakeLists.txt  README.md  init_update.sh  install.sh  reset.sh  scenicView.properties  unit-group-db  user-activity-config-db
activity-config-db/: 1aa623e4-f86a-482d-96fc-9ef3edce7965.json  85661fe8-fd19-464a-ba14-2f9a01f989ab.json  8999d58c-d23c-40e3-a33d-33d75a216ac2.json  9eeceb7f-3d15-42ae-8642-8c1360a67da2.json
agent-config-db/: 066a94d5-abdb-472e-be94-712fabd401c3.json  0a514c2d-3b2c-4303-a4b6-d90f0284fc83.json  122389cd-907f-4e7c-84de-aaa2a3f81771.json  1c51e24f-3e00-4a39-91a7-e7c240dcb63f.json  2661efe0-93c4-4574-8393-e7ad49e4db77.json  2d3adaee-3e87-4cc4-ac7a-62cfea694838.json  380abfb6-0863-4830-b12b-8f73fc0dc667.json  3873b82e-f9d0-44c8-b9ee-c7a40d438fca.json  45e18d97-8ec2-4c89-ae12-5ebd23d44e6f.json  4b0a86a3-d7b1-4cf3-b67b-75a4d049e7a2.json  502bdaaf-8d98-4563-9e13-200d33ced339.json  53712aee-7065-4672-b5b4-95a1f4b31b32.json  54398739-ed7a-4261-b2ca-e1eba578d2d8.json  58ef9986-dde6-4f00-bc94-9b9af0acfd22.json  59a219ed-6f69-41f7-908c-2066faac97c8.json  68937f67-107c-487a-a3a0-7b3761ad8e55.json  BathAmbientColorBeachBottom.json  BathAmbientColorBeachCeiling.json  BathAmbientColorForest.json  BathAmbientColorNight.json  BathAmbientColorZen.json  BathDimmerPowerStateSynchroniser.json  EntranceDimmerPowerStateSynchroniser.json  KitchenDimmerPowerStateSynchroniser.json  LoungeDimmerPowerStateSynchroniser.json  MediaDimmerPowerStateSynchroniser.json  PathwayDimmerPowerStateSynchroniser.json  PowerStateSynchroniserTestAgent.json  SoundScape.json  TableDimmerPowerStateSynchroniser.json  a2ae3197-e552-4e72-ac9c-0f419a31e964.json  b52852e5-0ff5-41d3-854c-3a38cc756b4a.json  b98b60db-b0c4-441f-bd14-271c76d447e6.json  be184a0f-8401-46e0-a1c8-999ca4704260.json  c1df1059-7823-4c24-8943-04db2bb04271.json  c8badacd-9ee8-4399-9e20-d65d92378f28.json  cd9f34b8-ffb9-4ac4-9a77-741c2fcdc144.json  d3e46543-b154-47ff-936d-e57056b85496.json  d8798d21-9426-4c8c-872a-f43d0e245a6d.json  d9d6cd7d-8a10-4149-b648-f62a78e25a4f.json  (+4 more)
app-config-db/: 7fa744b1-7bf1-42d5-b7e6-d603e54418dd.json  98acc701-87b9-4cf2-b79b-3eb6c166e2fe.json  bd5bfd15-bc85-4cde-bc04-f925f24a28c4.json  db33efb9-4864-4a60-a1f2-f75ef28ea158.json  e0979cf3-ab66-4cc5-9128-6e01aff3aba4.json
authorization-group-config-db/: 009a1c66-b1cb-46c0-b418-a3f54a6fba8c.json  0258c865-6863-4022-ae52-7c011ea5b201.json  08b45f66-7722-4732-ac5e-de96a9afdae4.json  08bff7b1-2ebe-4a2c-8be3-69cdd684a271.json  093fbb80-b835-4bc7-81f6-2aae571eac0e.json  0d84a5bc-daa8-4fd1-9723-7212a944d8f1.json  0f4d0f8d-253b-456a-a4be-8b2e895e1abf.json  1d42c89a-f995-44ec-88c9-820601fa45b8.json  27a6e899-a293-4d36-b8d8-eabb6325a0fe.json  29359916-e15a-4c45-8487-030e7997662f.json  2b0b0139-713c-4f58-b521-570c65713f43.json  349a2eea-5dd5-40cd-baf4-186c061c15e6.json  3597ef4f-40b8-45a2-9598-18310a115854.json  4483339e-95f6-4731-afe4-d441744f4ce0.json  4703725d-8a25-4c0f-9b64-8369dc57e810.json  52e7928f-69d1-4792-ae95-a8733927ac6b.json  57a630b1-addb-439d-be43-c155f653f88c.json  5f2b1484-d1d9-48ef-ba5f-2054e60808f2.json  6696d2fe-51e2-4069-b16f-24c658537121.json  (+23 more)
(+1082 files in other folders)
